/**
 * 此文件主要定义了内部同步所需的接口，
 */
package monad.proto;

import "command.proto";

option optimize_for = SPEED;

option java_package = "monad.protocol.internal";

option java_outer_classname = "InternalSyncProto";
/* 向Sync服务器发送同步请求 */
message SyncRequest {
  extend BaseCommand {
    required SyncRequest cmd = 101;
  }
  //数据分区ID
  required int32 partition_id = 1;
  //同步的序列号的其实位置,读取日志的时候，要大于等于这个值
  required int64 log_seq_from = 2;
  //同步的数据长度
  optional int32 size = 3 [default = 1000];
}
/* 响应同步请求，发送同步数据 */
message SyncResponse {
  extend BaseCommand {
    required SyncResponse cmd = 102;
  }
  message ResponseData {
    required bytes binlog_value = 1;
  }
  //分区ID
  required int32 partition_id = 1;
  //binlog的值
  repeated ResponseData response_data = 2;
  //原始数据
  //发送给客户端的消息
  optional bytes message = 3;
}
